example/concurrency-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: concurrency-client
  labels:
    app: concurrency-client
spec:
  replicas: 8
  selector:
    matchLabels:
      app: concurrency-client
  template:
    metadata:
      labels:
        app: concurrency-client
    spec:
      containers:
      - name: client
        image: golang:1.18
        command:
        - /bin/sh
        - -c
        - |
          [...]
