example/rps-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rps-client
  labels:
    app: rps-client
spec:
  replicas: 4
  selector:
    matchLabels:
      app: rps-client
  template:
    metadata:
      labels:
        app: rps-client
    spec:
      containers:
      - name: client
        image: golang:1.18
        command:
        - /bin/sh
        - -c
        - |
          [...]
