example/httpbin.yaml
apiVersion: v1
kind: Service
metadata:
  name: httpbin
  labels:
    app: httpbin
    service: httpbin
  annotations:
    aks.io/ingress-host: foo.test.ingress.dev
    aks.io/tls-cert-keyvault-uri: https://dev-2d8fd377a8d1a.vault.azure.net/certificates/test
spec:
  ports:
  - name: http
    port: 14001
  selector:
    app: httpbin

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpbin
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpbin
  template:
    metadata:
      labels:
        app: httpbin
    spec:
      containers:
      - image: kennethreitz/httpbin
        imagePullPolicy: IfNotPresent
        name: httpbin
        command: ["gunicorn", "-b", "0.0.0.0:14001", "httpbin:app", "-k", "gevent"]
        ports:
        - containerPort: 14001
